<resources>
    <string name="app_name">USC Films</string>
    <string name="title_home">Home</string>
    <string name="backend_host">https://vmdb-android.wl.r.appspot.com/</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Watchlist</string>
    <string name="movies_button">Movies</string>
    <string name="tv_shows_button">TV Shows</string>
    <string name="app_poster_image">APP_POSTER_IMAGE</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="top_rated">Top-Rated</string>
    <string name="popular">Popular</string>
    <string name="recycler_view_poster">recycler view poster</string>
    <string name="open_in_tmdb">Open in TMDB</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="fallback_image_for_video">Fallback image for video</string>
    <string name="media_title">Media Title</string>
    <string name="overview">Overview</string>
    <string name="genres">Genres</string>
    <string name="year">Year</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="recommended_picks">Recommended Picks</string>
    <string name="nothing_saved_to_watchlist">Nothing saved to Watchlist</string>
    <string name="movie_placeholder">Movie</string>
    <string name="tv_placeholder">TV</string>
    <string name="remove_from_watchlist_button">Remove from watchlist button</string>
    <string name="star">star</string>
    <string name="loading">Loading...</string>
    <string name="no_result_found">No result found.</string>
    <string name="powered_by">Powered by</string>
    <string name="tmdb">TMDB</string>
    <string name="developed_by_abhivineet">Developed by Abhivineet</string>
    <string name="watchlist_toggler">watchlist_toggler</string>
    <string name="facebook_share_button">facebook share button</string>
    <string name="twitter_share_button">twitter share button</string>
</resources>