<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spinner_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="More Fonts..."
            android:text="@string/loading"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_theaters_white_18dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_poster_image" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/header_image"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/movies"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/movies_button"
            android:textColor="@color/white"
            android:clickable="true"
            android:textSize="15sp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"
            android:text="@string/tv_shows_button"
            android:textColor="@color/highlight"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:gravity="center"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        android:visibility="gone"
        android:scrollbars="none"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            >

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/cpmc_slider"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginEnd="15dp"
                android:layout_centerInParent="true"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderAnimationDuration="600"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorEnabled="true"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="20dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="1dp"
                app:sliderIndicatorSelectedColor="@color/highlight"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                />

            <TextView
                android:id="@+id/top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cpmc_slider"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/top_rated"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_rated_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/top_rated"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/top_rated_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/popular"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/popular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/footer_container_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/popular_view"
                app:layout_constraintLeft_toLeftOf="parent"
                >

                <TextView
                    android:id="@+id/powered_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/highlight"
                    app:layout_constraintTop_toTopOf="@id/footer_container_1"
                    app:layout_constraintRight_toLeftOf="@id/tmdb_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/powered_by"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    />
                <TextView
                    android:id="@+id/tmdb_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/highlight"
                    app:layout_constraintTop_toTopOf="@id/footer_container_1"
                    app:layout_constraintLeft_toRightOf="@id/powered_by"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/tmdb"
                    android:clickable="true"
                    android:paddingStart="2dp"
                    android:paddingEnd="0dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/footer_container_1"
                android:text="@string/developed_by_abhivineet"
                android:textColor="@color/highlight"
                android:paddingVertical="2dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>