<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/media_details_spinner_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/loading"
            android:textColor="@color/white"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/media_details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:scrollbars="none"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/vid_img_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:autoPlay="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:visibility="gone"
                    />

                <ImageView
                    android:id="@+id/fallback_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fallback_image_for_video"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:visibility="gone"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/title_holder_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vid_img_holder"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/title_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/highlight"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textColor="@color/white"
                    android:textSize="27sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/overview_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/overview"
                android:textColor="@color/highlight"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_holder_card" />

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/overview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                app:layout_constraintTop_toBottomOf="@id/overview_header"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:trimExpandedText="show less"
                app:trimCollapsedText="show more"
                app:colorClickableText="@android:color/darker_gray"
                app:trimLength="170"
                app:trimMode="trimModeLength"
                android:layout_marginStart="10dp"
                />
            
            <TextView
                android:id="@+id/genres_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="20sp"
                android:textColor="@color/highlight"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/overview_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/genres"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/genres_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/genres_header"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/year_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="20sp"
                android:textColor="@color/highlight"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/genres_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/year"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/year_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textSize="19sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/year_header"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/misc_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year_content"
                android:background="@color/background"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                >
                <ImageButton
                    android:id="@+id/watchlist_toggler"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:scaleType="fitXY"
                    android:background="@color/background"
                    android:contentDescription="@string/watchlist_toggler" />

                <ImageButton
                    android:id="@+id/facebook_share"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintLeft_toRightOf="@id/watchlist_toggler"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_facebook_24"
                    android:background="@color/background"
                    android:scaleType="fitXY"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/facebook_share_button" />

                <ImageButton
                    android:id="@+id/twitter_share"
                    android:layout_width="28dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    app:layout_constraintLeft_toRightOf="@id/facebook_share"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_twitter_logo_dialog"
                    android:background="@color/background"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/twitter_share_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/cast_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="20sp"
                android:textColor="@color/highlight"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/misc_icons"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/cast"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@id/cast_header"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/reviews_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="20sp"
                android:textColor="@color/highlight"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cast_grid"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/reviews"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@id/reviews_header"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/recommended_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="20sp"
                android:textColor="@color/highlight"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/reviews_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/recommended_picks"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommended_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@id/recommended_header"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="10dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>