<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/media_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            >
            <FrameLayout
                android:id="@+id/poster_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                >

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="125dp"
                    android:layout_height="167dp"
                    android:clickable="false"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/recycler_view_poster"
                    />
                <ImageView
                    android:id="@+id/poster_overlay"
                    android:layout_width="125dp"
                    android:layout_height="167dp"
                    android:clickable="false"
                    android:src="@drawable/card_gradient"
                    android:contentDescription="@string/recycler_view_poster"
                    />

            </FrameLayout>
            <TextView
                android:id="@+id/ellipsis"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="@string/vertical_ellipsis"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/poster_container"
                app:layout_constraintRight_toRightOf="@+id/poster_container"
                />
            <ImageButton
                android:id="@+id/watchlist_button"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/poster_container"
                app:layout_constraintRight_toRightOf="@+id/poster_container"
                android:src="@drawable/ic_baseline_remove_circle_outline_24"
                android:contentDescription="@string/remove_from_watchlist_button"
                android:background="@android:color/transparent"
                android:layout_margin="5dp"
                />
            <TextView
                android:id="@+id/media_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/poster_container"
                app:layout_constraintLeft_toLeftOf="@+id/poster_container"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_margin="5dp"
                />

            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>